force-app/main/default/objects/order_shipment_summary_vw__x/order_shipment_summary_vw__x.object-meta.xml
<CustomObject>
    <description>order_shipment_summary_vw</description>
    <label>order_shipment_summary_vw</label>
    <pluralLabel>order_shipment_summary_vw</pluralLabel>
</CustomObject>