force-app/main/default/objects/order_shipment_summary_vw__x/fields/actual_ship_date_time__c.field-meta.xml
<CustomField>
    <fullName>actual_ship_date_time__c</fullName>
    <description>actual_ship_date_time</description>
    <label>actual_ship_date_time</label>
    <type>DateTime</type>
</CustomField>