force-app/main/default/objects/order_shipment_summary_vw__x/fields/city_name__c.field-meta.xml
<CustomField>
    <fullName>city_name__c</fullName>
    <description>city_name</description>
    <label>city_name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>