force-app/main/default/objects/order_shipment_summary_vw__x/fields/master_customer_nbr__c.field-meta.xml
<CustomField>
    <fullName>master_customer_nbr__c</fullName>
    <description>master_customer_nbr</description>
    <label>master_customer_nbr</label>
    <length>30</length>
    <type>Text</type>
</CustomField>