force-app/main/default/objects/order_shipment_summary_vw__x/fields/order_value_amt_us__c.field-meta.xml
<CustomField>
    <fullName>order_value_amt_us__c</fullName>
    <description>order_value_amt_us</description>
    <label>order_value_amt_us</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>